# python_web

module_1/: bin_serialization.py  json_serialization.py  (+5 more)
module_13/icollector/: manage.py  pyproject.toml  requirements.txt
module_13/icollector/icollector/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
module_13/icollector/orders/: admin.py  forms.py  models.py  urls.py  views.py
module_13/icollector/orders/migrations/: 0001_initial.py
module_13/icollector/orders/templates/orders/: order-create.html  order.html  orders.html  success.html
module_13/icollector/products/: admin.py  models.py  tests.py  urls.py  views.py
module_13/icollector/products/fixtures/: categories.json  products.json
module_13/icollector/products/migrations/: 0001_initial.py  0002_basket.py  0003_basket_user.py  0004_alter_basket_quantity.py  0005_product_stripe_product_price_id.py
module_13/icollector/products/templates/products/: base.html  baskets.html  index.html  products.html
module_13/icollector/users/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
module_13/icollector/users/migrations/: 0001_initial.py  0002_user_is_email_verified_emailverification.py
module_13/icollector/users/templates/users/: base.html  email_verification.html  login.html  profile.html  registration.html
module_14/quotes_scarpy/: pyproject.toml
module_14/quotes_scarpy/quotes/: database_quotes.db  main.py
module_14/quotes_scarpy/quotes/quotes/: items.py  models.py  pipelines.py  settings.py
module_14/quotes_scarpy/quotes/quotes/spiders/: authors_spider.py  quotes_spider.py
(+88 files in other folders)
