[tool.poetry]
name = "icollector"
version = "0.1.0"
description = ""
authors = ["taras <spasibovtaras@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
django-redis = "^5.2.0"
celery = {extras = ["redis"], version = "^5.2.7"}
django-debug-toolbar = "^3.8.1"
stripe = "^5.0.0"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
django-allauth = "^0.52.0"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
