[tool.poetry]
name = "quotes-scarpy"
version = "0.1.0"
description = ""
authors = ["taras <spasibovtaras@gmail.com>"]
readme = "README.md"
packages = [{include = "quotes_scarpy"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.1"
sqlalchemy = "^2.0.0rc2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
